fix: z-index for mobile nav; delete unwanted import;

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -119,7 +119,7 @@ p{
     }
   }
   .mobile-nav{
-    z-index: 10;
+    z-index: 900;
     position: fixed;
     right: 0;
     left: 0;
